--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@tailwindcss/vite": "^4.1.8",
     "antd": "^5.25.4",
     "axios": "^1.9.0",
+    "framer-motion": "^12.17.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "redux-persist": "^6.0.0",
