--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "antd": "^5.25.4",
     "axios": "^1.9.0",
+    "lucide-react": "^0.517.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
