--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
-    "antd": "^5.25.4",
+    "antd": "^5.26.2",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.517.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
@@ -24,6 +27,7 @@
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
