--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@ant-design/icons": "^6.0.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
-    "antd": "^5.26.2",
+    "antd": "^5.26.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.517.0",
+    "mapbox-gl": "^3.1.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-map-gl": "^7.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
